[gd_scene load_steps=6 format=3 uid="uid://c1tw48m2xp8jm"]

[ext_resource type="Theme" uid="uid://cyyh23cla17b6" path="res://ui/menu.tres" id="1_7lj2s"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="2_gl138"]
[ext_resource type="Texture2D" uid="uid://by4fpjw3bu86u" path="res://art/art.png" id="2_i3uxo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2hrg"]
atlas = ExtResource("2_i3uxo")
region = Rect2(0, 48, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vpkja"]
texture = SubResource("AtlasTexture_d2hrg")
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7lj2s")
script = ExtResource("2_gl138")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vpkja")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.35
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Play
"

[node name="CreditButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.55
anchor_right = 0.7
anchor_bottom = 0.7
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
